--- a/src/qt/res/bitcoin-qt.rc
+++ b/src/qt/res/bitcoin-qt.rc
@@ -22,7 +22,7 @@ BEGIN
             VALUE "FileDescription",    "HShare-Qt (OSS GUI client for HShare)"
             VALUE "FileVersion",        VER_FILEVERSION_STR
             VALUE "InternalName",       "hshare-qt"
-            VALUE "LegalCopyright",     "2009-2014 The Bitcoin developers, 2012-2014 The NovaCoin & PPCoin developers, 2014 The Blackcoin developers, 2016 The HShare developers"
+            VALUE "LegalCopyright",     "2009-2014 The Bitcoin developers, 2012-2014 The NovaCoin & PPCoin developers, 2014 The Blackcoin developers, 2016 The Stratis developers, 2017 The HShare developers"
             VALUE "LegalTrademarks1",   "Distributed under the MIT/X11 software license, see the accompanying file COPYING or http://www.opensource.org/licenses/mit-license.php."
             VALUE "OriginalFilename",   "hshare-qt.exe"
             VALUE "ProductName",        "HShare-Qt"
